# Arsenii-Beliaev

./: 123.txt  1A.cpp  1D.cpp  1F.cpp  2-5-A.cpp  2-5-B.cpp  2-5-C.cpp  2-5-E.cpp  2-6-F.cpp  2-6-G.cpp  2-6-H.cpp  2-6-J.cpp  2-6-K.cpp  2-7-E.cpp  2-7-F.cpp  2-7-H.cpp  2-7-I.cpp  2-7-J.cpp  2-7-K.cpp  2-7-L.cpp  2-8-A.cpp  2-8-B.cpp  2-8-C.cpp  2-8-D.cpp  2-8-G.cpp  2-8-H.cpp  2-8-I.cpp  2-8-J.cpp  2-9-A.cpp  2-9-C.cpp  2-9-D.cpp  2-9-F.cpp  2C.cpp  2D.cpp  2E.cpp  2H.cpp  3-11-D.cpp  3-11-I.cpp  3-12-A.cpp  3-13-B.cpp  (+11 more)
Prac_1/: PrintLengthMaxPrefix.cpp  README.md  run_test.sh
Prac_1/PrintLengthMaxPrefix_test/: CMakeLists.txt  MaxLength_test.cpp
Prac_1/include/: PrintLengthMaxPrefix.h
